build: Remove source and docs from dist files]